{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 37,
  "lineage": "05ef8f4f-1b3c-69a7-6c42-6cba1ac83d38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Clase-150824-EC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:533267362544:instance/i-09da2fd11475bb535",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09da2fd11475bb535",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "class_1608",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-078792a5ddb2f78f6",
            "private_dns": "ip-10-0-1-114.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.114",
            "public_dns": "ec2-18-212-39-161.compute-1.amazonaws.com",
            "public_ip": "18.212.39.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bc7667bc15032267",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d425c474a29ecff8",
            "tags": {
              "Name": "EC2_clase150824"
            },
            "tags_all": {
              "Name": "EC2_clase150824"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f366da906f02b1b"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_ssh",
            "aws_subnet.Subnet_clase_1",
            "aws_vpc.vpc_clase"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_clase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267362544:internet-gateway/igw-07f30cae047ecb14a",
            "id": "igw-07f30cae047ecb14a",
            "owner_id": "533267362544",
            "tags": {
              "Name": "gw_clase"
            },
            "tags_all": {
              "Name": "gw_clase"
            },
            "vpc_id": "vpc-0d0fe44855398d941"
          },
          "dependencies": [
            "aws_vpc.vpc_clase"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_clase_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267362544:route-table/rtb-04f14b5e5964f2e5a",
            "id": "rtb-04f14b5e5964f2e5a",
            "owner_id": "533267362544",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f30cae047ecb14a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_defaul_clase"
            },
            "tags_all": {
              "Name": "rt_defaul_clase"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0fe44855398d941"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw_clase",
            "aws_vpc.vpc_clase"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_rt_clase_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ad0b59b2ccebed6",
            "route_table_id": "rtb-04f14b5e5964f2e5a",
            "subnet_id": "subnet-0d425c474a29ecff8"
          },
          "dependencies": [
            "aws_internet_gateway.gw_clase",
            "aws_route_table.rt_clase_1",
            "aws_subnet.Subnet_clase_1",
            "aws_vpc.vpc_clase"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267362544:security-group/sg-03f366da906f02b1b",
            "description": "Permite el acceso SSH desde cualquier lugar",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permite salida a cualquier ip y puerto",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f366da906f02b1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permite acceso puerto 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG acceso SSH",
            "name_prefix": "",
            "owner_id": "533267362544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_clase_acceso_SSH"
            },
            "tags_all": {
              "Name": "SG_clase_acceso_SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0fe44855398d941"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_clase"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_clase_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267362544:subnet/subnet-0d425c474a29ecff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d425c474a29ecff8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267362544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_clase_1"
            },
            "tags_all": {
              "Name": "Subnet_clase_1"
            },
            "vpc_id": "vpc-0d0fe44855398d941"
          },
          "dependencies": [
            "aws_vpc.vpc_clase"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_clase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267362544:vpc/vpc-0d0fe44855398d941",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ded2a6972b092c9",
            "default_route_table_id": "rtb-0c5b4669997cd316a",
            "default_security_group_id": "sg-0abfe96df996b6e29",
            "dhcp_options_id": "dopt-0f54279addcf7c5f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0fe44855398d941",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5b4669997cd316a",
            "owner_id": "533267362544",
            "tags": {
              "Name": "vpc_Clase"
            },
            "tags_all": {
              "Name": "vpc_Clase"
            }
          }
        }
      ]
    }
  ]
}